--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -54,28 +54,22 @@
   }
 
   /* Custom styling for mobile view */
-  @media (max-width: 768px) {
-    .collapse {
+  @media (max-width: 990px) {
+    /* .collapse {
       position: absolute;
       top: 100%;
-      /* Push down below the navbar */
       right: 0;
-      /* Align to the right side of the screen */
       background-color: #fff;
-      /* Same background as navbar */
       box-shadow: -2px 4px 8px rgba(0, 0, 0, 0.1);
-      /* Shadow for dropdown */
       width: 200px;
-      /* Set a width for the collapsed menu */
       padding: 1rem;
-      /* Padding inside the collapse menu */
       border-radius: 8px 0 8px 8px;
-      /* Rounded edges on top left and bottom corners */
-    }
+    } */
 
-    .nav-item {
-      text-align: left;
-      /* Left align the text */
+    .nav-link {
+      background-color: #fa8d2d;
+      margin: 0.1rem 0;
+      color: #ffffff;
     }
   }
 </style>
