--- a/views/explorebooks/yourBooks.ejs
+++ b/views/explorebooks/yourBooks.ejs
@@ -14,9 +14,19 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
+        .no-book {
+            background-color: #fa8d2d41;
+            margin: 10rem 2rem;
+            padding: 2rem;
+        }
+
         h1 {
             font-size: 2.5rem;
             color: #333;
+            background-color: #FA8B2D;
+            padding: 4px;
+            color: #fff;
+            border-radius: 5px;
         }
 
         h2 {
@@ -32,7 +42,7 @@
         }
 
         thead {
-            background-color: #007bff;
+            background-color: #fa8b2d;
             color: white;
         }
 
@@ -66,8 +76,6 @@
             text-decoration: none;
             transition: background-color 0.3s;
         }
-
-
 
         .books-link:hover {
             background-color: #218838;
@@ -106,39 +114,41 @@
             }
         }
     </style>
+
     <div class="profile">
         <h1>Your Profile</h1>
         <hr>
         <h2>Your Added Books</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Image</th>
-                    <th>Title</th>
-                    <!-- <th>Author</th> -->
-                    <th>More details</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% yourBooks.forEach(book=> { %>
+
+        <% if (yourBooks && yourBooks.length> 0) { %>
+            <table>
+                <thead>
                     <tr>
-                        <td>
-                            <img src="<%= book.image.url %>" class="myBooks" alt="book image" />
-                        </td>
-                        <td>
-                            <%= book.title %>
-                        </td>
-                        <!-- <td>
-                            <%= book.author %>
-                        </td> -->
-                        <td>
-                            <div class="btns ">
-                                <a href="/explorebooks/<%= book._id %>" class="books-link">Click&nbsp;here..
-                                </a>
-                            </div>
-                        </td>
+                        <th>Image</th>
+                        <th>Title</th>
+                        <th>More details</th>
                     </tr>
-                    <% }) %>
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    <% yourBooks.forEach(book=> { %>
+                        <tr>
+                            <td>
+                                <img src="<%= book.image.url %>" class="myBooks" alt="book image" />
+                            </td>
+                            <td>
+                                <%= book.title %>
+                            </td>
+                            <td>
+                                <div class="btns">
+                                    <a href="/explorebooks/<%= book._id %>" class="books-link">Click&nbsp;here..</a>
+                                </div>
+                            </td>
+                        </tr>
+                        <% }) %>
+                </tbody>
+            </table>
+            <% } else { %>
+                <p class="no-book">No books added yet. Add your first book now! <br><a href="/addbooks/new">add now</a>
+                </p>
+                <% } %>
     </div>
