--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,10 +1,7 @@
 <% layout('/layouts/boilerplate') -%>
   <style>
     body {
-      background-color: #e9ecef;
-      /* Light background color */
       font-family: 'Arial', sans-serif;
-      /* Simple font for readability */
     }
 
     .box {
@@ -29,6 +26,7 @@
       padding: 20px;
       /* Padding inside the card */
       transition: transform 0.2s;
+      margin-top: 5rem;
       /* Animation on hover */
     }
 
@@ -133,7 +131,8 @@
   <div class="box">
     <div class="card">
       <div class="text-center mt-3">
-        <h1><i class="fa-solid fa-user login-icon"></i> LOGIN</h1>
+        <iframe src="https://lottie.host/embed/5355c81c-852f-4f37-80f7-f33ecd83ae9d/El0U6Ni3uz.json"></iframe>
+        <h6>Welcome <span>Back</span></h6>
       </div>
       <div class="card-body">
         <form action="/login" method="post" class="needs-validation" novalidate>
