for footer login

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -75,7 +75,8 @@
     margin-left: 10px;
   }
 
-  .fa-square-facebook {
+  .fa-square-facebook,
+  .fa-github {
     color: rgb(23, 159, 244);
     font-size: 30px;
     transition: transform 0.3s;
@@ -165,6 +166,9 @@
       </a>
       <a href="https://www.instagram.com/mohit._.thakur._.07/">
         <i class="fa-brands fa-square-instagram"></i>
+      </a>
+      <a href="https://github.com/mohitthakur07">
+        <i class="fa-brands fa-github"></i>
       </a>
     </div>
     <div class="footer-info">
