--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,7 +11,7 @@
 } */
 
 /* media for pc */
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 1200px) {
   .home-view {
     background-image: url(home_img.jpg);
     height: 100vh;
@@ -43,6 +43,82 @@
     background-color: #fa8b2d;
   }
 }
+/* media for screens between 700px and 1200px */
+@media only screen and (min-width: 700px) and (max-width: 1200px) {
+  .home-view {
+    height: 50vh;
+    margin-top: 2rem;
+    background-color: #000000;
+  }
+
+  .title {
+    color: rgb(255, 255, 255);
+    position: absolute;
+    top: 12rem;
+    left: 30%;
+    text-align: center;
+  }
+
+  .title h1 {
+    color: #f5f4f8;
+    font-size: 2rem;
+  }
+
+  .title p {
+    color: #ccc;
+    font-size: 1.2rem;
+  }
+
+  .find-btn button {
+    background-color: #fa8b2d;
+    border: none;
+    border-radius: 4rem;
+    padding: 0.5rem 2rem;
+    font-size: 1rem;
+  }
+
+  .border {
+    margin-top: 1rem;
+    height: 0.4rem;
+    background-color: #fa8b2d;
+  }
+
+  .cards {
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin: 1rem;
+    padding: 1.5rem;
+    width: 40rem;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: center;
+  }
+
+  .card-info {
+    width: 15rem;
+  }
+
+  .cards img {
+    height: 8rem;
+  }
+
+  .cards-2 {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    padding: 1rem;
+    border-radius: 1rem;
+  }
+
+}
+
+
 
 /* media for mobile  */
 @media only screen and (max-width: 700px) {
