--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Hub</title>
-  <link rel="icon" href="home_img.jpg" />
+  <link rel="icon" href="bookhub.logo.jpg" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7910071752654927"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/explorebooks.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,9 +32,6 @@
           integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
           crossorigin="anonymous"></script>
         <script src="/js/form.js"></script>
-        <script async
-          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7910071752654927"
-          crossorigin="anonymous"></script>
 </body>
 
 </html>
