re design book hub

--- a/views/addbooks/add.ejs
+++ b/views/addbooks/add.ejs
@@ -28,7 +28,7 @@
     }
 
     .form-container h3 {
-      background-color: #FA8B2D;
+      background-color: #0a1828;
       padding: 5px;
       border-radius: 10px;
       color: #fff;
@@ -57,6 +57,7 @@
       padding: 0.5rem 1rem;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      margin-left: 38%;
     }
 
     .btn-success:hover {
@@ -118,7 +119,7 @@
                   id="location" required />
                 <div class="invalid-feedback">Enter your location</div>
               </div>
-              <button class="btn btn-danger">Submit</button>
+              <button class="btn btn-success">Submit</button>
               <br />
               <br />
               <br />
