--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -1,11 +1,17 @@
 <% layout('/layouts/boilerplate') -%>
-
   <div class="home">
     <div class="home-view">
       <div class="title">
-        <iframe src="https://lottie.host/embed/0834cffb-665b-40f7-8cc8-d7f63b45f58d/FSYsXj5q87.json"></iframe>
-        <h1>Book Hub</h1>
-        <p>"Where every book find a new home"</p>
+        <div class="home-logo">
+          <div class="logo">
+            <iframe src="https://lottie.host/embed/0834cffb-665b-40f7-8cc8-d7f63b45f58d/FSYsXj5q87.json"
+              class="home-ani"></iframe>
+          </div>
+          <div class="heading">
+            <h1>Book Hub</h1>
+            <p>"Where every book finds a new home"</p>
+          </div>
+        </div>
         <div class="find-btn">
           <button type="button" class="btn btn-warning">
             <a href="/explorebooks">find your books <i class="fa-solid fa-magnifying-glass"></i></a>
@@ -14,82 +20,19 @@
       </div>
     </div>
 
-    <div class="border">
-      <div>
-        <!-- <marquee behavior="scroll" direction="left" scrollamount="9">
-          *welcome to book hub
-        </marquee> -->
 
-      </div>
-    </div>
   </div>
 
-  <!-- cards -->
-  <!-- <div class="sponsor-section">
-    <h4>Proudly Sponsored by</h4>
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="/css/SKJ.jpg" alt="Sri Krishn Jewellers" />
-          <p>Discover the art of fine jewelry with Sri Krishn Jewellers, where tradition meets elegance.</p>
-        </div>
-        <div class="swiper-slide">
-          <img src="/css/SKJ.jpg" alt="Another Sponsor" />
-          <p>Description for another sponsor.</p>
-        </div>
-        <div class="swiper-slide">
-          <img src="/css/SKJ.jpg" alt="Yet Another Sponsor" />
-          <p>Description for yet another sponsor.</p>
-        </div>
-      </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
-  </div> -->
-
-  <div class="card-container">
-    <div class="cards card-1">
-      <div class="card-img">
-        <img src="/css/what.jpg" alt="image not found" />
-      </div>
-      <div class="card-content">
-        <h3>What is bookHub?</h3>
-        <p>
-          "BookHub" is your go-to platform for facilitating seamless book
-          exchanges among students. Whether you're looking to pass on textbooks
-          you no longer need or searching for required course materials at
-          affordable prices, "BookHub" connects sellers with buyers
-          effortlessly. With its intuitive interface and robust features,
-          "BookHub" streamlines the process of browsing, negotiating, and
-          finalizing book exchanges within the student community. Join "BookHub"
-          today and embark on a journey of hassle-free book swapping!
-        </p>
-      </div>
-    </div>
-    <div class="cards card-2">
-      <div class="card-img">
-        <img src="/css/why.png" alt="image not found" />
-      </div>
-      <div class="card-content">
-        <h3>Why bookHub?</h3>
-        <p>
-          "BookHub" serves as the bridge between students who have books to sell
-          and those in search of affordable study materials. Through "BookLink,"
-          users can seamlessly connect with sellers, browse through a diverse
-          range of books, and negotiate deals directly. With its user-friendly
-          interface and robust features, "BookHub" makes buying and selling
-          textbooks and literature within the student community effortless and
-          efficient. Join "BookLink" today and experience the convenience of
-          connecting with your peers for your book needs!
-        </p>
-      </div>
-    </div>
-  </div>
-  <br /><br />
   <div class="it-works">
+    <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/oM3Cl1OxfHw?si=ML7pTVsW9FJZiAmC&autoplay=1&loop=1&playlist=oM3Cl1OxfHw"
+      title="YouTube video player" class="youtube" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
+
+    <hr /><br><br>
     <h4>Here's how it works</h4>
-    <hr />
   </div>
   <br />
   <div class="card-container-2">
@@ -141,4 +84,44 @@
       </div>
     </div>
   </div>
+
+  <div class="card-container">
+    <div class="cards card-1">
+      <div class="card-img">
+        <img src="/css/what.jpg" alt="image not found" />
+      </div>
+      <div class="card-content">
+        <h3>What is bookHub?</h3>
+        <p>
+          "BookHub" is your go-to platform for facilitating seamless book
+          exchanges among students. Whether you're looking to pass on textbooks
+          you no longer need or searching for required course materials at
+          affordable prices, "BookHub" connects sellers with buyers
+          effortlessly. With its intuitive interface and robust features,
+          "BookHub" streamlines the process of browsing, negotiating, and
+          finalizing book exchanges within the student community. Join "BookHub"
+          today and embark on a journey of hassle-free book swapping!
+        </p>
+      </div>
+    </div>
+    <div class="cards card-2">
+      <div class="card-img">
+        <img src="/css/why.png" alt="image not found" />
+      </div>
+      <div class="card-content">
+        <h3>Why bookHub?</h3>
+        <p>
+          "BookHub" serves as the bridge between students who have books to sell
+          and those in search of affordable study materials. Through "BookLink,"
+          users can seamlessly connect with sellers, browse through a diverse
+          range of books, and negotiate deals directly. With its user-friendly
+          interface and robust features, "BookHub" makes buying and selling
+          textbooks and literature within the student community effortless and
+          efficient. Join "BookLink" today and experience the convenience of
+          connecting with your peers for your book needs!
+        </p>
+      </div>
+    </div>
+  </div>
+  <br /><br />
   </div>
