--- a/views/home/privacy.ejs
+++ b/views/home/privacy.ejs
@@ -1,5 +1,25 @@
 <% layout('/layouts/boilerplate') -%>
 
+  <style>
+    .privacy {
+      margin-top: 5rem;
+    }
+
+    h1,
+    h2,
+    h3 {
+      color: red;
+    }
+
+    .privacy p {
+      color: #fff;
+    }
+
+    .privacy ul li {
+      color: #fff;
+    }
+  </style>
+
   <div class="privacy">
     <h1>PRIVACY POLICY</h1>
     <h3>Last Updated: Oct 16, 2024</h3>
