--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,13 @@
 <style>
   footer {
-    background-color: #333;
+    background-color: #000000;
     color: #fff;
     padding: 40px 0;
     position: relative;
+  }
+
+  P {
+    text-align: center;
   }
 
   .footer-container {
@@ -113,6 +117,7 @@
 </style>
 
 <footer>
+  <p>This is beta version</p>
   <hr />
   <div class="footer-container">
     <!-- About Us -->
@@ -167,12 +172,12 @@
       <a href="https://www.instagram.com/mohit._.thakur._.07/">
         <i class="fa-brands fa-square-instagram"></i>
       </a>
-      <a href="https://github.com/mohitthakur07">
+      <!-- <a href="https://github.com/mohitthakur07">
         <i class="fa-brands fa-github"></i>
-      </a>
+      </a> -->
     </div>
     <div class="footer-info">
-      <div>&copy; Book Hub V2.0.2</div>
+      <div>&copy; Book Hub beta version3.0.1</div>
       <p>Contact: mohitkumart19@gmail.com</p>
       <p><i>Made with love &hearts;</i></p>
     </div>
