--- a/views/explorebooks/yourBooks.ejs
+++ b/views/explorebooks/yourBooks.ejs
@@ -1,28 +1,29 @@
 <%- layout('layouts/boilerplate') -%>
     <style>
         body {
-            background-color: #f9f9f9;
+            background-color: #0a1828 !important;
             font-family: Arial, sans-serif;
         }
 
         .profile {
             margin-top: 5rem;
             text-align: center;
-            background-color: #fff;
+            /* background-color: #fff; */
             padding: 2rem;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .no-book {
-            background-color: #fa8d2d41;
+            background-color: #1a416e;
+            color: #fff;
             margin: 10rem 2rem;
             padding: 2rem;
         }
 
         h1 {
             font-size: 2.5rem;
-            color: #333;
+            color: #ffffff;
             background-color: #FA8B2D;
             padding: 4px;
             color: #fff;
@@ -32,7 +33,7 @@
         h2 {
             margin-top: 1rem;
             font-size: 1.75rem;
-            color: #555;
+            color: #ffffff;
         }
 
         table {
@@ -42,7 +43,7 @@
         }
 
         thead {
-            background-color: #fa8b2d;
+            background-color: #0a1828;
             color: white;
         }
 
@@ -51,14 +52,15 @@
             padding: 12px;
             border: 1px solid #ddd;
             text-align: left;
+            color: #fff;
         }
 
-        tr:nth-child(even) {
+        /* tr:nth-child(even) {
             background-color: #f2f2f2;
-        }
+        } */
 
         tr:hover {
-            background-color: #f1f1f1;
+            background-color: #123965;
         }
 
         .btns {
