--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,34 +1,18 @@
 <style>
-    .alert{
-        margin-top: 7rem;
-    }
+  .alert {
+    margin-top: 7rem;
+  }
 </style>
 
 <% if(success && success.length){%>
-    <div
-      class="alert alert-success alert-dismissible fade show col-6 offset-3"
-      role="alert"
-    >
-      <%= success %>
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="alert"
-        aria-label="clone"
-      ></button>
-    </div>
-    <% } %> <% if(error && error.length){%>
-    <div
-      class="alert alert-danger alert-dismissible fade show col-6 offset-3"
-      role="alert"
-    >
-      <%= error %>
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="alert"
-        aria-label="clone"
-      ></button>
-    </div>
-    <% } %>
-    
+  <div class="alert alert-success alert-dismissible fade show col-6 offset-3" role="alert">
+    <%= success %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="clone"></button>
+  </div>
+  <% } %>
+    <% if(error && error.length){%>
+      <div class="alert alert-danger alert-dismissible fade show col-6 offset-3" role="alert">
+        <%= error %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="clone"></button>
+      </div>
+      <% } %>
