--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Hub</title>
-  <link rel="icon" href="bookhub.logo.jpg" />
+  <link rel="icon" href="image.png" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7910071752654927"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/home.css" />
