--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -117,9 +117,20 @@
 </style>
 
 <footer>
-  <p>This is beta version</p>
+  <!-- <p>This is beta version</p> -->
   <hr />
   <div class="footer-container">
+    <!-- Quick Links -->
+    <div class="footer-section">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="/">home</a></li>
+        <li><a href="/explorebooks">explore books</a></li>
+        <li><a href="/addbooks/new">Add your book</a></li>
+        <li><a href="/explorebooks">Book Exchange</a></li>
+      </ul>
+    </div>
+
     <!-- About Us -->
     <div class="footer-section">
       <h3>About Us</h3>
@@ -127,17 +138,6 @@
         <li><a href="#">Our Story</a></li>
         <li><a href="#">Team</a></li>
         <li><a href="#">Careers</a></li>
-      </ul>
-    </div>
-
-    <!-- Services -->
-    <div class="footer-section">
-      <h3>Services</h3>
-      <ul>
-        <li><a href="/explorebooks">explore books</a></li>
-        <li><a href="/addbooks/new">Add your book</a></li>
-        <li><a href="/explorebooks">Book Exchange</a></li>
-        <li><a href="#">E-books</a></li>
       </ul>
     </div>
 
@@ -153,10 +153,6 @@
 
     <!-- Newsletter -->
     <div class="footer-section newsletter">
-      <h3>Newsletter</h3>
-      <p>Sign up for updates and offers:</p>
-      <!-- <input type="email" placeholder="Your email" />
-      <button>Subscribe</button> -->
       <ul>
         <li><a href="/signup">SignUp</a></li>
         <li><a href="/login">Login</a></li>
