--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -88,7 +88,7 @@
   <div class="card-container">
     <div class="cards card-1">
       <div class="card-img">
-        <img src="/css/what.jpg" alt="image not found" />
+        <img src="/css/what2.png" alt="image not found" />
       </div>
       <div class="card-content">
         <h3>What is bookHub?</h3>
