--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -14,8 +14,12 @@
         </div>
         <div class="find-btn">
           <button type="button" class="btn btn-warning">
-            <a href="/explorebooks">find your books <i class="fa-solid fa-magnifying-glass"></i></a>
+            <a href="/explorebooks">Find your books <i class="fa-solid fa-magnifying-glass"></i></a>
           </button>
+          <br><br>
+          <!-- <button type="button" class="btn btn-warning">
+            <a href="/addbooks/new">Add books +</a>
+          </button> -->
         </div>
       </div>
     </div>
