--- a/views/explorebooks/notfound.ejs
+++ b/views/explorebooks/notfound.ejs
@@ -1,16 +1,17 @@
 <% layout('/layouts/boilerplate') -%>
-<style>
-  .not-found {
-    margin: 15rem 0;
-    text-align: center;
-  }
+  <style>
+    .not-found {
+      margin: 15rem 0;
+      text-align: center;
+      color: #fff;
+    }
 
-  .not-found a{
-    color: red;
-    
-  }
-</style>
-<div class="not-found">
-  <h1>The book you are looking for is not available on Book Hub</h1>
-  <a href="/explorebooks" class="btn-danger"><b>go back <i class="fa-solid fa-backward"></i></b></a>
-</div>
+    .not-found a {
+      color: red;
+
+    }
+  </style>
+  <div class="not-found">
+    <h1>The book you are looking for is not available on Book Hub</h1>
+    <a href="/explorebooks" class="btn-danger"><b>go back <i class="fa-solid fa-backward"></i></b></a>
+  </div>
