--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -93,6 +93,10 @@
     font-weight: bold;
   }
 
+  .logout {
+    color: rgb(208, 66, 66);
+  }
+
 
 
   @media (min-width: 990px) {
@@ -104,8 +108,6 @@
 
   }
 
-  /* Mobile view */
-  /* Mobile view */
   /* Mobile view */
   @media (max-width: 990px) {
     .navbar-toggler {
@@ -138,11 +140,16 @@
       color: rgb(255, 255, 255);
       width: 100%;
       text-align: center;
-      padding: 1rem 0;
+      box-shadow: 0px 1px 6px #000000bd;
+      margin-top: 0.5rem;
     }
 
     .show {
       right: 0;
+    }
+
+    .logout {
+      color: rgb(208, 66, 66);
     }
 
     .close-btn {
@@ -180,7 +187,7 @@
           <% } %>
             <% if (curntUser) { %>
               <a class="nav-link <%= currentRoute === '/yourbooks' ? " active" : '' %>" href="/yourbooks">Your Profile
-                <i class="fa-solid fa-user"></i></a><a class="nav-link" href="/logout">Log out <i
+                <i class="fa-solid fa-user"></i></a><a class="nav-link logout" href="/logout">Log out <i
                   class="fa-solid fa-right-from-bracket"></i></a>
               <% } %>
       </div>
